update BeautifulSoup boilderplate

--- a/A_BeautifulSoup_Boilerplate.ipynb
+++ b/A_BeautifulSoup_Boilerplate.ipynb
@@ -4,8 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A BeautifulSoup boilerplate \n",
-    "(Let retrieve content from a page)\n",
+    "# A BeautifulSoup Boilerplate \n",
+    "(Let retrieve contents from a web page)\n",
+    "\n",
+    "A couple of notes on Beautiful Soup:\n",
+    "* Do not execute JavaScript\n",
+    "* Allow us to use Cascading Style Sheets selectors\n",
+    "\n",
+    "\n",
+    "In the follow notebook I will show:\n",
     "\n",
     "1. Retrieve the page\n",
     "2. Select specific HTML nodes\n",
@@ -31,7 +38,8 @@
     "ExecuteTime": {
      "end_time": "2018-03-27T14:40:46.880400Z",
      "start_time": "2018-03-27T14:40:41.480078Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -41,8 +49,11 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
+    "# User Agent will allow us to present the request as from a web browser\n",
     "USER_AGENT_HEADER = {'User-Agent': 'Mozilla/5.0 (iPad; CPU OS 9_3_1 like Mac OS X) ApclearpleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13E238 Safari/601.1'}\n",
+    "# URL is the page we will scrape da from \n",
     "URL = \"https://github.com/linediconsine\"\n",
+    "# Where I want to save the data\n",
     "CSV_FILE = \"simple_test.csv\""
    ]
   },
@@ -66,7 +77,8 @@
     "ExecuteTime": {
      "end_time": "2018-03-27T14:34:03.618740Z",
      "start_time": "2018-03-27T14:34:02.874735Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
