update beutysoup tutorial and create regression_performance tutorial

--- a/A_BeautifulSoup_Boilerplate.ipynb
+++ b/A_BeautifulSoup_Boilerplate.ipynb
@@ -6,15 +6,18 @@
    "source": [
     "# A BeautifulSoup Boilerplate \n",
     "(Let retrieve contents from a web page)\n",
+    "_____\n",
+    "Thanks to: \n",
+    "- Rana for her precious feedback\n",
+    "____\n",
     "\n",
     "A couple of notes on Beautiful Soup:\n",
-    "* Do not execute JavaScript\n",
+    "* Does not execute JavaScript\n",
     "* Allow us to use Cascading Style Sheets selectors\n",
     "\n",
     "\n",
-    "In the follow notebook I will show:\n",
-    "\n",
-    "1. Retrieve the page\n",
+    "In the follow notebook I will show you how to:\n",
+    "1. Retrieve a web page\n",
     "2. Select specific HTML nodes\n",
     "3. Save content in CSV file"
    ]
@@ -49,9 +52,9 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
-    "# User Agent will allow us to present the request as from a web browser\n",
+    "# User Agent will allow us to present the request as if it was from a web browser\n",
     "USER_AGENT_HEADER = {'User-Agent': 'Mozilla/5.0 (iPad; CPU OS 9_3_1 like Mac OS X) ApclearpleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13E238 Safari/601.1'}\n",
-    "# URL is the page we will scrape da from \n",
+    "# URL is the page we will scrape data from \n",
     "URL = \"https://github.com/linediconsine\"\n",
     "# Where I want to save the data\n",
     "CSV_FILE = \"simple_test.csv\""
@@ -67,12 +70,12 @@
    },
    "source": [
     "## 1. Retrieve the page content\n",
-    "( And yes that's a 2 lines of code for that)"
+    "( And yes that's 2 lines of code for that)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-27T14:34:03.618740Z",
@@ -105,8 +108,8 @@
    "source": [
     "### CSS Selector\n",
     "\n",
-    "I will use CSS selectors because are simpler, faster than other selectors.\n",
-    "A CSS selector is the part of a CSS rule set that actually selects the content you want to style. Let's look at some example : \n",
+    "I will use CSS selectors because they are simpler and faster than other selectors.\n",
+    "A CSS selector is the part of a CSS rule set that actually selects the content you want to style. Let's look at some examples: \n",
     "\n",
     "**Syntax:**\n",
     "\n",
@@ -129,7 +132,7 @@
     "```python\n",
     "soup.select('div[data-timestamp]')```\n",
     "\n",
-    "* *Concetenate*\n",
+    "* *Concatenate*\n",
     "\n",
     "```python\n",
     ".slideshow-intro-content * ```\n",
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-27T15:41:04.513096Z",
@@ -165,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "'Marco A'"
+       "u'Marco A'"
       ]
      },
      "metadata": {},
@@ -175,12 +178,12 @@
    "source": [
     "# Retrive a single element\n",
     "\n",
-    "# NOTE: This approach avoid crash if an element is missing\n",
+    "# NOTE: This approach avoid having the code crash if an element is missing\n",
     "user_name = \"\"\n",
     "if soup.select('h1.vcard-names .p-name '):\n",
     "    user_name = soup.select('h1.vcard-names .p-name ')[0].get_text()\n",
     "\n",
-    "# This code instead will crash if the element don't exist :\n",
+    "# This code  will crash if the element don't exist :\n",
     "# title = soup.select('h1.vcard-names .p-name ')[0].get_text()\n",
     "display(user_name)"
    ]
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-27T15:40:41.779549Z",
@@ -223,12 +226,12 @@
     "# Retrive multiple elements (note: output are HTML nodes )\n",
     "\n",
     "array_repo = soup.select('.repo')\n",
-    "display(article_p)"
+    "display(array_repo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-27T15:40:39.011932Z",
@@ -239,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "'UkuTuna'"
+       "u'UkuTuna'"
       ]
      },
      "metadata": {},
@@ -248,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "'iPython-Snippets'"
+       "u'iPython-Snippets'"
       ]
      },
      "metadata": {},
@@ -257,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "'TheFoxGame'"
+       "u'TheFoxGame'"
       ]
      },
      "metadata": {},
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-03-27T15:47:53.135782Z",
@@ -318,7 +321,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UkuTuna</td>\n",
+       "      <td>iPython-Snippets</td>\n",
        "      <td>Marco A</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -326,8 +329,8 @@
        "</div>"
       ],
       "text/plain": [
-       "      repo user_name\n",
-       "0  UkuTuna   Marco A"
+       "               repo user_name\n",
+       "0  iPython-Snippets   Marco A"
       ]
      },
      "metadata": {},
@@ -335,7 +338,7 @@
     }
    ],
    "source": [
-    "d = {'user_name': user_name , 'repo' : array_repo[0].get_text()}\n",
+    "d = {'user_name': user_name , 'repo' : array_repo[1].get_text()}\n",
     "df = pd.DataFrame(data=d, index=[0])\n",
     "display(df)"
    ]
